<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/med_margin"
            android:paddingBottom="@dimen/med_margin"
            android:text="@string/date"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/med_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/med_margin"
            android:drawableLeft="@drawable/ic_place"
            android:hint="@string/city"
            android:textSize="@dimen/text_city"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="@drawable/button_a"
            app:layout_constraintLeft_toRightOf="@id/city"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageWeather"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/med_margin"
        android:src="@drawable/im1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lat"
                android:text="@string/lat"
                style="@style/TextTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lon"
                android:text="@string/lon"
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/now"
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temp_now"
                style="@style/TextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/now" />

            <TextView
                android:id="@+id/descriptionTV"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/little_cloud"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp_now" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/today"
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/today">

                <TextView
                    android:id="@+id/temp_today_max"
                    style="@style/TextInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/max"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temp_today_max" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/linearMax"
                app:layout_constraintTop_toBottomOf="@+id/today">

                <TextView
                    android:id="@+id/temp_today_min"
                    style="@style/TextInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    app:layout_constraintLeft_toLeftOf="@id/max"
                    app:layout_constraintTop_toBottomOf="@id/temp_today_max" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        style="@style/TextTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_week" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewWeek"
        android:layout_margin="@dimen/med_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_forecast_week" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wDeg"
                    style="@style/TextInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/wSpeed"
                    style="@style/TextInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/null_margin"
                    android:text="@string/sw_4m_s" />

                <TextView
                    style="@style/TextInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/null_margin"
                    android:text="@string/m_s" />

            </LinearLayout>

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/humidityTV"
                style="@style/TextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_81" />

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise" />

            <TextView
                android:id="@+id/sunriseTV"
                style="@style/TextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pressure"
                    style="@style/TextInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1010mb" />

                <TextView
                    style="@style/TextInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/null_margin"
                    android:text="@string/mb" />
            </LinearLayout>

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudiness" />

            <TextView
                android:id="@+id/clouds"
                style="@style/TextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100" />

            <TextView
                style="@style/TextTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset" />

            <TextView
                android:id="@+id/sunsetTV"
                style="@style/TextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_31" />
        </LinearLayout>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/StartService"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SecondActivity"
        android:padding="@dimen/small_margin"
        android:background="@drawable/button_a"
        android:text="@string/second_activity" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>